Add author information to all posts
The posts did not get proper metadata for the authors. Added these
to the YAML

--- a/_posts/2010-09-19-mika-on-kuudes-mauste.html
+++ b/_posts/2010-09-19-mika-on-kuudes-mauste.html
@@ -4,6 +4,7 @@ title: "Mik\xC3\xA4 on kuudes mauste?"
 published: true
 meta: 
   _edit_last: "1"
+author: Molemmat
 tags: 
 - Kuudes mauste
 type: post
