--- a/_posts/2010-09-25-viimeisimmat-punaviinit-osa-i.html
+++ b/_posts/2010-09-25-viimeisimmat-punaviinit-osa-i.html
@@ -3,7 +3,7 @@ layout: post
 title: "Viimeisimm\xC3\xA4t punaviinit, osa I"
 published: true
 meta: {}
-
+author: Ferrix
 tags: 
 - Viinit
 type: post
