--- a/_posts/2010-09-21-valineistoa-ja-lampaankaapapihvit.html
+++ b/_posts/2010-09-21-valineistoa-ja-lampaankaapapihvit.html
@@ -2,7 +2,7 @@
 layout: post
 title: !binary |
   VsOkbGluZWlzdMO2w6QgamEgbGFtcGFhbmvDpMOkcMOkcGlodml0
-
+author: Mikael
 published: true
 meta: 
   _edit_last: "1"
