Improve category pages
* Urls configurable in _config.yml
* Category pages under /luokat
* A Liquid template that fetches categories from site.categorylinks
* Use new references in templates

--- a/luokka/ruuanlaitto.html
+++ b/luokka/ruuanlaitto.html
@@ -1,6 +1,9 @@
 ---
 permalink: ruuanlaitto/
-category: Ruuanlaitto
+categories:
+- Ruuanlaitto
+- Reseptit
+- Välineet
 layout: page
 ---
 {% include the-erudite/category %}
