Add layout to categories
Copy category page layout over from original Erudite.

--- a/luokka/blogi.html
+++ b/luokka/blogi.html
@@ -1,6 +1,7 @@
 ---
 permalink: blogi/
 category: Kuudes mauste
-layout: page
+layout: category
+title: Arkisto &ndash; Kuudes mauste
 ---
 {% include the-erudite/category %}
