--- a/luokka/reseptit.html
+++ b/luokka/reseptit.html
@@ -1,6 +1,7 @@
 ---
 permalink: ruuanlaitto/reseptit/
 category: Reseptit
-layout: page
+layout: category
+title: Arkisto &ndash; Reseptit
 ---
 {% include the-erudite/category %}
