--- a/luokka/ruuanlaitto.html
+++ b/luokka/ruuanlaitto.html
@@ -4,6 +4,7 @@ categories:
 - Ruuanlaitto
 - Reseptit
 - Välineet
-layout: page
+layout: category
+title: Arkisto &ndash; Ruuanlaitto
 ---
 {% include the-erudite/category %}
