--- a/luokka/valineet.html
+++ b/luokka/valineet.html
@@ -1,6 +1,7 @@
 ---
 permalink: ruuanlaitto/valineet/
 category: Välineet
-layout: page
+layout: category
+title: Arkisto &ndash; Välineet
 ---
 {% include the-erudite/category %}
