--- a/luokka/viinit.html
+++ b/luokka/viinit.html
@@ -1,6 +1,7 @@
 ---
 permalink: viinit/
 category: Viinit
-layout: page
+layout: category
+title: Arkisto &ndash; Viinit
 ---
 {% include the-erudite/category %}
